--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,5 @@
-﻿.idea/workspace.xml
-spring-02/.idea
-spring-02/target
-spring-03/.mvn
-spring-04/.mvn
-spring-05/.mvn
+﻿
+.idea
+target
+.mvn
 *.log
