--- a/spring-05/src/main/resources/application.yml
+++ b/spring-05/src/main/resources/application.yml
@@ -7,4 +7,13 @@ spring:
       path: /h2-console
       settings:
         web-allow-others: true
+  jpa:
+    generate-ddl: true
+    hibernate:
+      ddl-auto: create
 
+    properties:
+      hibernate:
+        format_sql: true
+
+    show-sql: true
