--- a/project-work/system-services/configuration/admin-server.yml
+++ b/project-work/system-services/configuration/admin-server.yml
@@ -2,7 +2,7 @@ spring:
   application:
     name: admin-server
   profiles:
-    active: dev
+    active: native
 eureka:
   client:
     serviceUrl:
