--- a/project-work/system-services/gateway/src/main/resources/application.yml
+++ b/project-work/system-services/gateway/src/main/resources/application.yml
@@ -3,7 +3,13 @@ spring:
     name: gateway
   profiles:
     active: native
+#  cloud:
+#    gateway:
+#      routes:
+
 eureka:
   client:
     serviceUrl:
       defaultZone: http://localhost:8761/eureka/
+management.endpoint.gateway.enabled: true
+management.endpoints.web.exposure.include: gateway
