--- a/project-work/system-services/gateway/src/main/resources/application.yml
+++ b/project-work/system-services/gateway/src/main/resources/application.yml
@@ -2,7 +2,7 @@ spring:
   application:
     name: gateway
   profiles:
-    active: native
+    active: dev
 #  cloud:
 #    gateway:
 #      routes:
