--- a/project-work/configuration/admin-server.yml
+++ b/project-work/configuration/admin-server.yml
@@ -1,18 +1,12 @@
 spring:
   application:
-    name: config-server
+    name: admin-server
   config:
     activate:
       on-profile: dev
-  cloud:
-    config:
-      server:
-        native:
-          search-locations: file:./configuration
-
 eureka:
   client:
     serviceUrl:
       defaultZone: http://localhost:8761/eureka/
-
-server.port: 18888
+server:
+  port: 7000
