--- a/project-work/configuration/eureka-server.yml
+++ b/project-work/configuration/eureka-server.yml
@@ -1,11 +1,14 @@
 spring:
   application:
     name: eureka-server
-  profiles:
-    activate: dev
+  config:
+    activate:
+      on-profile: dev
 eureka:
   client:
     registerWithEureka: false
     fetchRegistry: false
+  instance:
+    prefer-ip-address: true   
 server:
-  port: 18761
+  port: 8761
