--- a/project-work/configuration/service-advertisement.yml
+++ b/project-work/configuration/service-advertisement.yml
@@ -1,3 +1,4 @@
+debug: true
 spring:
   application:
     name: service-advertisement
@@ -17,18 +18,25 @@ spring:
 
     properties:
       hibernate:
-        format_sql: false
+        format_sql: true
 
     show-sql: true
 logging:
   file:
     name: log/service-advertisement.log
+  level:
+    org.hibernate.SQL: DEBUG
+    org.hibernate.type: TRACE 
 eureka:
   client:
     serviceUrl:
       defaultZone: http://localhost:8761/eureka/
+  instance:
+    prefer-ip-address: true
 management:
   endpoints:
     web:
       exposure:
         include: "*"
+server:
+  port: 0
