--- a/project-work/system-services/admin-server/src/main/resources/application.yml
+++ b/project-work/system-services/admin-server/src/main/resources/application.yml
@@ -2,10 +2,8 @@ spring:
   application:
     name: admin-server
   profiles:
-    active: native
+    active: dev
 eureka:
   client:
     serviceUrl:
       defaultZone: http://localhost:8761/eureka/
-server:
-  port: 0
