--- a/project-work/system-services/configuration/eureka-server.yml
+++ b/project-work/system-services/configuration/eureka-server.yml
@@ -1,8 +1,9 @@
 spring:
   application:
     name: eureka-server
-  profiles:
-    active: dev
+  config:
+    activate:
+      on-profile: dev
 eureka:
   client:
     registerWithEureka: false
